# weft-id

./: .coveragerc  .dockerignore  .env.dev.example  .env.example  .env.onprem.example  .env.production.example  .gitignore  BACKLOG.md  BACKLOG_ARCHIVE.md  CHANGELOG.md  CLAUDE.md  CONTINUE.md  Caddyfile  Dockerfile  ISSUES.md  ISSUES_ARCHIVE.md  LICENSE  Makefile  NOTES.md  README.md  TODO.md  VERSIONING.md  code-quality  docker-compose.onprem.yml  docker-compose.production.yml  docker-compose.yml  install.sh  mkdocs.yml  prod_requirements.lock.txt  pyproject.toml  pytest.ini  quality-all  tailwind.config.js  test  test-coverage-all  test-e2e  weftid
app/: .dockerignore  Dockerfile  __init__.py  api_dependencies.py  config.py  database.py  dependencies.py  dev-docker-entrypoint.sh  main.py  migrate.py  oauth2.py  pages.py  pyproject.toml  requirements.txt  settings.py  sql.py  version.py  worker.py
app/cli/: provision_tenant.py  reactivate_user.py  verify_email.py
app/constants/: event_types.py  nameid_formats.py  user_attributes.py
app/database/: __init__.py  _core.py  bg_tasks.py  branding.py  event_log.py  export_files.py  forward_auth_nonces.py  groups.py  mfa.py  oauth2.py  protected_domains.py  proxy_apps.py  reactivation.py  saml.py  scim_credentials.py  scim_inbound_tokens.py  scim_push_queue.py  scim_remote_ids.py  scim_scope.py  scim_sync_log.py  security.py  service_providers.py  settings.py  sp_group_assignments.py  sp_nameid_mappings.py  sp_signing_certificates.py  tenant_attribute_config.py  tenants.py  user_activity.py  user_attributes.py  user_emails.py  user_idp_attributes.py  users.py  webauthn_credentials.py
app/database/groups/: __init__.py  core.py  effective.py  idp.py  layouts.py  lineage.py  listing.py  memberships.py  relationships.py  scim_reads.py  selection.py
app/database/oauth2/: __init__.py  authorization.py  clients.py  tokens.py
app/database/saml/: __init__.py  certificates.py  debug.py  domains.py  idp_certificates.py  idp_sp_certificates.py  providers.py  security.py
app/database/users/: __init__.py  _utils.py  activity.py  audit_export.py  authentication.py  core.py  lifecycle.py  listing.py  profile.py  saml_assignment.py  scim_reads.py
app/dev/: bulk_users.py  forward_auth_testbed.py  preview_emails.py  scim_loopback_testbed.py  seed_dev.py  sso_chain_testbed.py  sso_extras_testbed.py  sso_testbed.py  tenants.py  users.py
app/jobs/: __init__.py  bulk_add_secondary_emails.py  bulk_change_primary_email.py  bulk_group_assignment.py  bulk_inactivate_users.py  bulk_reactivate_users.py  bulk_update_users.py  check_hibp_breaches.py  cleanup_exports.py  cleanup_saml_debug.py  cleanup_scim_sync_log.py  export_events.py  export_users.py  export_users_template.py  inactivate_idle_users.py  process_scim_push_queue.py  redact_verbose_event_pii.py  refresh_saml_metadata.py  registry.py  rotate_certificates.py
app/middleware/: __init__.py  body_limit.py  csrf.py  request_context.py  security_headers.py  session.py  tenant_guard.py
app/migrations/: 00001_tenants.sql
app/routers/: account.py  account_passkeys.py  admin.py  auth.py  branding.py  dev.py  groups.py  health.py  integrations.py  mfa.py  oauth2.py  protected_domains.py  proxy_apps.py  saml.py  settings.py  settings_branding.py  tenants.py  users.py
app/routers/auth/: __init__.py  _helpers.py  _login_completion.py  dashboard.py  enhanced_enrollment.py  login.py  logout.py  onboarding.py  passkey_login.py  password_reset.py  reactivation.py
app/routers/forward_auth/: __init__.py  runtime.py
app/routers/groups/: __init__.py  applications.py  creation.py  detail.py  listing.py  members.py  relationships.py
app/routers/saml/: __init__.py  _helpers.py  authentication.py  logout.py  selection.py
app/routers/saml_idp/: __init__.py  _helpers.py  admin.py  metadata.py  scim_admin.py  slo.py  sso.py
app/schemas/: api.py  bg_tasks.py  branding.py  bulk_update.py  event_log.py  groups.py  oauth2.py  protected_domains.py  proxy_apps.py  reactivation.py  saml.py  scim.py  scim_admin.py  scim_inbound.py  service_providers.py  settings.py  webauthn.py
app/services/: __init__.py  activity.py  auth.py  bg_tasks.py  branding.py  bulk_update.py  emails.py  event_log.py  exceptions.py  exports.py  forward_auth.py  groups.py  health.py  mfa.py  oauth2.py  protected_domains.py  proxy_apps.py  reactivation.py  saml.py  service_providers.py  settings.py  types.py  users.py  webauthn.py
app/templates/: account_background_jobs.html  account_inactivated.html  account_job_output.html  account_recovery_inactivated.html  admin_event_detail.html  admin_events.html  admin_exports.html  admin_reactivation_history.html  admin_reactivation_requests.html  admin_todo_user_attributes.html  admin_user_export.html  base.html  dashboard.html  email_verification.html  enroll_enhanced_auth.html  error.html  forced_password_reset.html  forgot_password.html  groups_detail.html  groups_detail_base.html  groups_detail_tab_applications.html  groups_detail_tab_danger.html  groups_detail_tab_delete.html  groups_detail_tab_details.html  groups_detail_tab_membership.html  groups_detail_tab_relationships.html  groups_list.html  groups_members.html  groups_members_add.html  groups_new.html  integrations_app_detail.html  integrations_apps.html  integrations_b2b.html  integrations_b2b_detail.html  login.html  mfa_backup_codes.html  mfa_downgrade_verify.html  mfa_manage.html  mfa_setup.html  mfa_setup_passcode.html  (+73 more)
app/utils/: auth.py  cache.py  crypto.py  csp_nonce.py  datetime_format.py  email.py  email_branding.py  email_verification.py  forward_auth.py  mandala.py  mfa.py  password.py  password_strength.py  profile_attributes.py  qr.py  ratelimit.py  request_context.py  request_metadata.py  safe_http.py  saml.py  saml_assertion.py  saml_authn_request.py  saml_idp.py  saml_slo.py  scim_crypto.py  scim_responses.py  service_errors.py  session.py  static_assets.py  storage.py  template_context.py  templates.py  tokens.py  url_safety.py  urls.py  validate.py  webauthn.py  wordlist.py  xlsx_encryption.py
(+848 files in other folders)
