[tool.poetry]
name = "weft-id"
version = "1.0.4"
description = "Multi-tenant FastAPI application"
authors = ["Jon Nylander <pellepim@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.135.1"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
psycopg = {extras = ["binary"], version = "^3.3.3"}
psycopg-pool = "^3.3.0"
argh = "^0.31.0"
argon2-cffi = "^25.1.0"
jinja2 = "^3.1.0"
python-multipart = "^0.0.22"
itsdangerous = "^2.2.0"
pyotp = "^2.9.0"
cryptography = "^46.0.5"
babel = "^2.17.0"
email-validator = "^2.0.0"
pydantic = {extras = ["email"], version = "^2.12.5"}
resend = "^2.25.0"
sendgrid = "^6.11.0"
pymemcache = "^4.0.0"
python3-saml = "^1.16.0"
qrcode = {extras = ["pil"], version = "^8.0"}
ua-parser = "^1.0.1"
defusedxml = "^0.7.1"
httpx = "^0.28.1"
werkzeug = ">=3.1.6"
dnspython = "^2.7.0"
zxcvbn = "^4.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.7"
mypy = "^1.13.0"
pytest-cov = "^7.0.0"
pytest-xdist = "^3.5.0"
pip-audit = "^2.10.0"
pytest-mock = "^3.15.1"
types-defusedxml = "^0.7.0.20250822"
lxml-stubs = "^0.5.1"
playwright = "^1.58.0"
pytest-playwright = "^0.7.2"
pytest-testmon = "^2.2.0"
pip = ">=26.0"
zensical = "^0.0.28"

[tool.poetry.scripts]
# Note: These are for documentation. Run commands directly:
#   poetry run pytest
#   poetry run ruff check app/ tests/
#   poetry run mypy app/
# The scripts below are not used but document the standard commands.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "DTZ"]
ignore = []

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
mypy_path = "app"
explicit_package_bases = true
namespace_packages = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["pymemcache.*", "sendgrid.*", "ua_parser.*", "onelogin.*", "requests.*", "qrcode.*", "PIL.*", "xmlsec", "xmlsec.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
